crates/model/tests/compile_fail/model_empty.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

// model! with no fields should fail — `name` and `root` are required.
quent_model::model! {}

fn main() {}
