crates/model/tests/compile_fail/model_empty.stderr
error: unexpected end of input, `model!` requires a `name: <Ident>` field
 --> tests/compile_fail/model_empty.rs:5:1
  |
5 | quent_model::model! {}
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `quent_model::model` (in Nightly builds, run with -Z macro-backtrace for more info)
